@@ -1,0 +1,3 @@
+<p>This is the Nangband development plan.  Designed, created, maintained and copyrighted by Andrew 
+Sidwell, 2002.</p>
+<p><img src="images/devplan.gif" alt="Development plan"></p>
